Generate `meta.json` with parameters from `prodigal-gv`

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ universal = true
 [generate_json]
 training = vendor/prodigal-gv/training.c
 metagenomic = vendor/prodigal-gv/metagenomic.c
-output = pyrodigal_gv/models.json
+output = pyrodigal_gv/meta.json
 
 [coverage:report]
 include = pyrodigal_gv/*
