--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,8 @@ jobs:
       run: python -m pip install -U pip wheel setuptools
     - name: Install Pyrodigal
       run: pip install -U --pre pyrodigal
+    - name: Install requirements
+      run: pip install -U -r pyrodigal_gv/tests/requirements.txt
     - name: Test code
       run: python -m unittest discover -v
     
