Add tests using phage contigs from PMC9197471

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ tests_require =
 
 [options.package_data]
 pyrodigal_gv = py.typed, meta.json
+pyrodigal_gv.tests = *.fna, *.faa, *.txt
 
 [bdist_wheel]
 universal = true
