--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ python_requires = >=3.6
 setup_requires =
     setuptools >=46.4
 install_requires =
-    pyrodigal ~=3.0
+    pyrodigal # ~=3.0
 tests_require =
     importlib-resources ; python_version < '3.7'
 
