Fix `importlib-resources` optional requirement in `setup.cfg`

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,9 +42,8 @@ python_requires = >=3.6
 setup_requires =
     setuptools >=46.4
 install_requires =
-    pyrodigal # ~=3.0
-tests_require =
-    importlib-resources ; python_version < '3.7'
+    pyrodigal ~=3.0
+    importlib-resources ; python_version < '3.9'
 
 [options.package_data]
 pyrodigal_gv = py.typed, meta.json
