Make `setup.py` pre-compile the `meta.py` file with literal initializers

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,21 +36,23 @@ project_urls =
 
 [options]
 zip_safe = false
-packages = pyrodigal_gv
-include_package_data = true
+packages = pyrodigal_gv, pyrodigal_gv.tests
+include_package_data = false
 python_requires = >=3.6
 setup_requires =
     setuptools >=46.4
+    wheel >=0.1
+    packaging >=19.1
 install_requires =
-    pyrodigal ~=3.0
+    pyrodigal #~=3.0.0-alpha1
     importlib-resources ; python_version < '3.9'
 
 [options.package_data]
-pyrodigal_gv = py.typed, meta.json
+pyrodigal_gv = py.typed
 pyrodigal_gv.tests = *.fna, *.faa, *.txt
 
 [bdist_wheel]
-universal = true
+universal = false
 
 [generate_json]
 training = vendor/prodigal-gv/training.c
@@ -69,6 +71,9 @@ exclude_lines =
     raise NotImplementedError
     return NotImplemented
     raise MemoryError()
+
+[mypy]
+exclude = build/
 
 [mypy-pyrodigal_gv]
 disallow_any_decorated = true
