--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ license = GPLv3
 platform = any
 keywords = bioinformatics, genome, orf, gene, prodigal
 classifier =
-    Development Status :: 4 - Beta
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
@@ -41,7 +41,7 @@ include_package_data = false
 python_requires = >=3.6
 setup_requires =
     setuptools >=46.4
-    wheel >=0.1
+    wheel >=0.23
     packaging >=19.1
 install_requires =
     pyrodigal #~=3.0.0-alpha1
