--- a/.github/workflows/requirements.txt
+++ b/.github/workflows/requirements.txt
@@ -1,5 +1,3 @@
-coverage ~=4.0 ; implementation_name == 'cpython'
-cython ~=3.0
-wheel
-auditwheel <5.2
+wheel >=0.23
+packaging >=19.1
 setuptools >=46.4.0
