--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -164,6 +164,8 @@ jobs:
   upload:
     environment: PyPI
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     name: Upload
     needs:
     - sdist
@@ -177,10 +179,6 @@ jobs:
         path: dist
     - uses: pypa/gh-action-pypi-publish@master
       if: startsWith(github.ref, 'refs/tags')
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        skip_existing: true
 
   release:
     environment: GitHub Releases
