--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -177,7 +177,7 @@ jobs:
       with:
         name: wheels
         path: dist
-    - uses: pypa/gh-action-pypi-publish@master
+    - uses: pypa/gh-action-pypi-publish@release/v1
       if: startsWith(github.ref, 'refs/tags')
 
   release:
