Remove generation of compiled `meta.pyc` in package

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ pyrodigal_gv = py.typed
 pyrodigal_gv.tests = *.fna, *.faa, *.txt
 
 [bdist_wheel]
-universal = false
+universal = true
 
 [generate_json]
 training = vendor/prodigal-gv/training.c
