--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,101 +7,39 @@ on:
 
 jobs:
 
-  wheel:
-    name: Build Linux wheels (x86-64)
-    runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-        - python-version: 3.6
-          python-release: v3.6
-          python-impl: CPython
-        - python-version: 3.7
-          python-release: v3.7
-          python-impl: CPython
-        - python-version: 3.8
-          python-release: v3.8
-          python-impl: CPython
-        - python-version: 3.9
-          python-release: v3.9
-          python-impl: CPython
-        - python-version: '3.10'
-          python-release: v3.10
-          python-impl: CPython
-        - python-version: '3.11'
-          python-release: v3.11
-          python-impl: CPython
-        - python-version: pypy-3.7
-          python-release: v3.7
-          python-impl: PyPy
-        - python-version: pypy-3.8
-          python-release: v3.8
-          python-impl: PyPy
-        - python-version: pypy-3.9
-          python-release: v3.9
-          python-impl: PyPy
+    sdist:
+    runs-on: ubuntu-latest
+    name: Build wheel distribution
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
       with:
         submodules: true
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.12
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install build dependencies
+        python-version: 3.12
+    - name: Install build requirements
       run: python -m pip install -U -r .github/workflows/requirements.txt
-    - name: Install Pyrodigal
-      run: python -m pip install --pre pyrodigal
-    - name: Build wheel
-      run: python setup.py bdist_wheel
-    - uses: actions/upload-artifact@v3
+    - name: Install build package
+      run: python -m pip install build
+    - name: Build source distribution
+      run: python -m build --wheel --outdir wheels
+    - name: Store built source distribution
+      uses: actions/upload-artifact@v2
       with:
         name: wheels
         path: dist/*
 
-  test-wheel:
+  test-sdist:
+    runs-on: ubuntu-latest
     name: Test wheel distribution
-    runs-on: ubuntu-20.04
     needs:
-    - wheel
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-        - python-version: 3.6
-          python-release: v3.6
-          python-impl: CPython
-        - python-version: 3.7
-          python-release: v3.7
-          python-impl: CPython
-        - python-version: 3.8
-          python-release: v3.8
-          python-impl: CPython
-        - python-version: 3.9
-          python-release: v3.9
-          python-impl: CPython
-        - python-version: '3.10'
-          python-release: v3.10
-          python-impl: CPython
-        - python-version: '3.11'
-          python-release: v3.11
-          python-impl: CPython
-        - python-version: pypy-3.7
-          python-release: v3.7
-          python-impl: PyPy
-        - python-version: pypy-3.8
-          python-release: v3.8
-          python-impl: PyPy
-        - python-version: pypy-3.9
-          python-release: v3.9
-          python-impl: PyPy
+    - sdist
     steps:
-    - name: Setup Python ${{ matrix.python-version }}
+    - name: Setup Python 3.12
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.12'
     - name: Download built wheels
       uses: actions/download-artifact@v2
       with:
@@ -113,7 +51,7 @@ jobs:
       run: python -m pip install --pre pyrodigal
     - name: Install built wheel
       run: python -m pip install --only-binary pyrodigal-gv --find-links=dist pyrodigal-gv
-    - name: Run tests
+    - name: Run tests without coverage
       run: python -m unittest pyrodigal_gv.tests -vv
 
   sdist:
@@ -123,14 +61,16 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: true
-    - name: Set up Python 3.11
+    - name: Set up Python 3.12
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: 3.12
     - name: Install build requirements
       run: python -m pip install -U -r .github/workflows/requirements.txt
+    - name: Install build package
+      run: python -m pip install build
     - name: Build source distribution
-      run: python setup.py sdist
+      run: python -m build --sdist --outdir wheels
     - name: Store built source distribution
       uses: actions/upload-artifact@v2
       with:
@@ -143,10 +83,10 @@ jobs:
     needs:
     - sdist
     steps:
-    - name: Setup Python 3.11
+    - name: Setup Python 3.12
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: '3.12'
     - name: Download built wheels
       uses: actions/download-artifact@v2
       with:
