--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
 
-    sdist:
+  wheel:
     runs-on: ubuntu-latest
     name: Build wheel distribution
     steps:
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Python 3.12
       uses: actions/setup-python@v4
       with:
-        python-version: 3.12
+        python-version: '3.12'
     - name: Install build requirements
       run: python -m pip install -U -r .github/workflows/requirements.txt
     - name: Install build package
@@ -30,11 +30,11 @@ jobs:
         name: wheels
         path: dist/*
 
-  test-sdist:
+  test-wheel:
     runs-on: ubuntu-latest
     name: Test wheel distribution
     needs:
-    - sdist
+    - wheel
     steps:
     - name: Setup Python 3.12
       uses: actions/setup-python@v4
