--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install build package
       run: python -m pip install build
     - name: Build source distribution
-      run: python -m build --wheel --outdir wheels
+      run: python -m build --wheel --outdir dist
     - name: Store built source distribution
       uses: actions/upload-artifact@v2
       with:
@@ -70,7 +70,7 @@ jobs:
     - name: Install build package
       run: python -m pip install build
     - name: Build source distribution
-      run: python -m build --sdist --outdir wheels
+      run: python -m build --sdist --outdir dist
     - name: Store built source distribution
       uses: actions/upload-artifact@v2
       with:
