Add missing `meta.json` to wheel distributions [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ project_urls =
 [options]
 zip_safe = false
 packages = pyrodigal_gv, pyrodigal_gv.tests
-include_package_data = false
+include_package_data = true
 python_requires = >=3.6
 setup_requires =
     setuptools >=46.4
@@ -49,7 +49,7 @@ install_requires =
     importlib-resources ; python_version < '3.9'
 
 [options.package_data]
-pyrodigal_gv = py.typed
+pyrodigal_gv = py.typed, meta.json
 pyrodigal_gv.tests = *.fna, *.faa, *.txt
 
 [bdist_wheel]
