--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ setup_requires =
     setuptools >=46.4
     wheel >=0.23
 install_requires =
-    pyrodigal ~=3.1
+    pyrodigal ~=3.2,!=3.2.0
     importlib-resources ; python_version < '3.9'
 
 [options.package_data]
