Add `pyrodigal-gv` console script to `setup.cfg`

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,10 @@ install_requires =
     pyrodigal ~=3.2,!=3.2.0
     importlib-resources ; python_version < '3.9'
 
+[options.entry_points]
+console_scripts =
+    pyrodigal-gv = pyrodigal_gv.cli:main
+
 [options.package_data]
 pyrodigal_gv = py.typed, meta.json
 pyrodigal_gv.tests = *.fna, *.faa, *.txt
