Use SPDX license qualifier in `setup.cfg` [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ url = https://github.com/althonos/pyrodigal-gv
 description = A Pyrodigal extension to predict genes in giant viruses and viruses with alternative genetic code. 
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = GPLv3
+license = GPL-3.0-only
 platform = any
 keywords = bioinformatics, genome, orf, gene, prodigal
 classifier =
