--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build wheel distribution
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
     - name: Set up Python 3.12
@@ -25,7 +25,7 @@ jobs:
     - name: Build source distribution
       run: python -m build --wheel --outdir dist
     - name: Store built source distribution
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: wheels
         path: dist/*
@@ -41,7 +41,7 @@ jobs:
       with:
         python-version: '3.12'
     - name: Download built wheels
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
           name: wheels
           path: dist/
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build source distribution
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
     - name: Set up Python 3.12
@@ -72,9 +72,9 @@ jobs:
     - name: Build source distribution
       run: python -m build --sdist --outdir dist
     - name: Store built source distribution
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
-        name: wheels
+        name: sdist
         path: dist/*
 
   test-sdist:
@@ -88,9 +88,9 @@ jobs:
       with:
         python-version: '3.12'
     - name: Download built wheels
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
-          name: wheels
+          name: sdist
           path: dist/
     - name: Update pip to latest version
       run: python -m pip install -U pip setuptools wheel
@@ -113,7 +113,11 @@ jobs:
     - wheel
     - test-wheel
     steps:
-    - uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v4
+      with:
+        name: sdist
+        path: dist
+    - uses: actions/download-artifact@v4
       with:
         name: wheels
         path: dist
@@ -127,46 +131,46 @@ jobs:
     name: Release
     needs: upload
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
     - uses: rasmus-saks/release-a-changelog-action@v1.2.0
       with:
         github-token: '${{ secrets.GITHUB_TOKEN }}'
 
-  # aur:
-  #   environment: Arch Linux User Repository
-  #   runs-on: ubuntu-latest
-  #   if: "!contains(github.ref, 'rc')"
-  #   name: Update AUR package
-  #   needs:
-  #   - sdist
-  #   - upload
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     with:
-  #       submodules: true
-  #   - name: Set up Python 3.10
-  #     uses: actions/setup-python@v4
-  #     with:
-  #       python-version: '3.10'
-  #   - name: Download built wheels
-  #     uses: actions/download-artifact@v2
-  #     with:
-  #         name: wheels
-  #         path: dist
-  #   - name: Extract package version
-  #     run: echo PKGVER=$(python setup.py --version) >> $GITHUB_ENV
-  #   - name: Compute SHA256 of source distribution
-  #     run: echo SHA256=$(sha256sum dist/pyrodigal-gv-${{ env.PKGVER }}.tar.gz | cut -f1 -d' ') >> $GITHUB_ENV
-  #   - name: Generate PKGBUILD
-  #     run: sed -e "s/%pkgver/${{ env.PKGVER }}/g" -e "s/%sha256sum/${{ env.SHA256 }}/g" pkg/aur/PKGBUILD.in > pkg/aur/PKGBUILD
-  #   - name: Update package
-  #     uses: KSXGitHub/github-actions-deploy-aur@v2.7.2
-  #     with:
-  #       pkgname: python-pyrodigal-gv
-  #       pkgbuild: pkg/aur/PKGBUILD
-  #       commit_username: ${{ secrets.AUR_USER }}
-  #       commit_email: ${{ secrets.AUR_EMAIL }}
-  #       ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
-  #       commit_message: ${{ github.event.head_commit.message }}
+  aur:
+    environment: Arch Linux User Repository
+    runs-on: ubuntu-latest
+    if: "!contains(github.ref, 'rc') && !contains(github.ref, 'alpha') && !contains(github.ref, 'post')"
+    name: Update AUR package
+    needs:
+    - sdist
+    - upload
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: true
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+    - name: Download built wheels
+      uses: actions/download-artifact@v4
+      with:
+          name: sdist
+          path: dist
+    - name: Extract package version
+      run: echo PKGVER=$(echo '${{ github.ref }}' | cut -d'v' -f2) >> $GITHUB_ENV
+    - name: Compute SHA256 of source distribution
+      run: echo SHA256=$(sha256sum dist/pyrodigal_gv-${{ env.PKGVER }}.tar.gz | cut -f1 -d' ') >> $GITHUB_ENV
+    - name: Generate PKGBUILD
+      run: sed -e "s/%pkgver/${{ env.PKGVER }}/g" -e "s/%sha256sum/${{ env.SHA256 }}/g" pkg/aur/PKGBUILD.in > pkg/aur/PKGBUILD
+    - name: Update package
+      uses: KSXGitHub/github-actions-deploy-aur@v3.0.1
+      with:
+        pkgname: python-pyrodigal-gv
+        pkgbuild: pkg/aur/PKGBUILD
+        commit_username: ${{ secrets.AUR_USER }}
+        commit_email: ${{ secrets.AUR_EMAIL }}
+        ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+        commit_message: ${{ github.event.head_commit.message }}
